fix: align nav menu and subscriptions

--- a/src/components/MenuItemsList/menu-items-list.module.scss
+++ b/src/components/MenuItemsList/menu-items-list.module.scss
@@ -1,15 +1,7 @@
 @use '../../sass/abstracts/variables.module' as variables;
 
-.list {
+.menu {
   display: flex;
   flex-direction: column;
-  gap: 2.8rem;
-}
-
-.item {
-  display: flex;
-  align-items: center;
-  gap: 1.4rem;
-
-  color: variables.$color-text-l;
+  gap: 6rem;
 }
