--- a/src/components/Subscriptions/subscriptions.module.scss
+++ b/src/components/Subscriptions/subscriptions.module.scss
@@ -1,4 +1,7 @@
 .subscriptions {
+  display: flex;
+  flex-direction: column;
+  gap: 3.3rem;
 }
 
 .title {
